Libidn NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002, 2003, 2004, 2005 Simon Josefsson
See the end for copying conditions.

* Version 0.6.0 (unreleased)

** Support shared libraries on Cygwin and Mingw32, thanks to Yaakov S.

** Fix memory leak.

** API and ABI is backwards compatible with the previous version.

* Version 0.5.20 (released 2005-10-23)

** The header file pr29.h is now installed by 'make install'.

** Translation updates.

** Update of gnulib files.

** API and ABI is backwards compatible with the previous version.

* Version 0.5.19 (released 2005-09-19)

** The test for setlocale and nl_langinfo has now been separated.
The autoconf script now test for locale.h, setlocale and
nl_langinfo(CODESET) independently.

** Gnulib updates, fixes for getopt.

** Java manuals in doc/java/ are now generated by Gjdoc from GNU Classpath.

** Kaffe is used to link the pre-built libidn-*.jar file.

** Translation updates.

** API and ABI is backwards compatible with the previous version.

* Version 0.5.18 (released 2005-07-16)

** The macro AX_CREATE_STDINT_H that is used to create idn-int.h
** has been updated.

** Fix use of 'head -1' in configure script (should be 'head -n -1'),
** thanks to Carsten Lohrke.

** Announce the help-libidn mailing list in documentation and README.

** Translation updates.

** API and ABI is backwards compatible with the previous version.

* Version 0.5.17 (released 2005-05-26)

** The gnulib portability files were updated.

** The license template in files were updated with the new address.

** Translation updated.

** API and ABI is backwards compatible with the previous version.

* Version 0.5.16 (released 2005-05-06)

** Mark static PR29 data tables as 'const', thanks to Joe Orton.

** Kinyarwanda translations added, thanks to Steve Murphy.

** API and ABI is backwards compatible with the previous version.

* Version 0.5.15 (released 2005-03-19)
